tests/negative/parser/paramlist2.orng
// paramlist2.orng:5:21: error: expected a type here, got `fn`
// fn a (x : Int, y: fn () -> Int {}, z: Int) -> Int {}
//                    ^
// 
fn a (x : Int, y: fn () -> Int {}, z: Int) -> Int {}